2007-05-18 Xavier Bachelot <xavier-at-bachelot-dot-org> 

	* libxvmc/Makefile.am:
	* libxvmc/viaXvMC.c: (XvMCCreateContext):

	Backport 2 fixes from Xorg tree.
	http://gitweb.freedesktop.org/?p=xorg/driver/xf86-video-via.git;a=commit;h=362e03a38682bfcf366242c53444fa36b6052794
	http://gitweb.freedesktop.org/?p=xorg/driver/xf86-video-via.git;a=commit;h=3cd7dac2b5a1c4bfb66bd1b67904d72dc08cbd0e

2007-04-14  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_id.c: (ViaDoubleCheckCLE266Revision),
	(ViaCheckCardId):

	VN -> VM, message tweaks, and trailing white space fixes.

2007-03-04  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via.man:

	Textual tweaks and options ordered alphabetically.

2007-02-16  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_accel.c: (viaSetClippingRectangle),
	(viaAccelSolidHelper), (viaAccelCopyHelper),
	(viaSubsequentMono8x8PatternFillRect),
	(viaSubsequentColor8x8PatternFillRect),
	(viaSubsequentSolidTwoPointLine), (viaSubsequentSolidHorVertLine):

	Limit x value to sixteen bits.  Fixes a rendering glitch reported
	by Marg Huijgen <mark-dot-sf-dot-net-at-huijgen-dot-tk>; solution
	found by Thomas.

2007-02-10  Thomas Hellström  <thomas-at-tungstengraphics-dot-com>
	
	* unichrome/via_accel.c: (viaFlushDRIEnabled),
	(viaSubsequentSolidTwoPointLine):

	Fix line-clipping bug reported by Manuel Bilderbeek
	<manuel-dot-bilderbeek-at-oce-dot-com>.
	
2007-02-06  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c:

	Try CR39 when CR34 says zero during memory detection on
	the CLE266.  Idea from Luc Verhaegen, patch by Mark Huijgen
	<mark-dot-sf-dot-net-at-huijgen-dot-tk>.

2007-01-20  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* ChangeLog

	Switch encoding of ChangeLog file to Unicode.
	Whitespace and format adjustments.

2007-01-20  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIALoadRgbLut), (VIALoadPalette),